--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@typescript-eslint/eslint-plugin": "^4.17.0",
     "@typescript-eslint/parser": "^4.17.0",
     "@vitejs/plugin-react-refresh": "^1.3.1",
+    "autoprefixer": "^10.2.5",
     "eslint": "^7.22.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^8.1.0",
@@ -28,7 +29,9 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "npm-run-all": "^4.1.5",
     "onchange": "^7.1.0",
+    "postcss": "^8.2.8",
     "prettier": "2.2.1",
+    "tailwindcss": "^2.0.3",
     "typescript": "^4.1.2",
     "vite": "^2.0.5"
   }
